--- a/css/registered_users.css
+++ b/css/registered_users.css
@@ -2,6 +2,7 @@
 
 .registered-users {
   padding: 20px;
+  overflow-x: hidden; /* Add this line to hide horizontal scrollbar */
 }
 
 .registered-users h1 {
@@ -18,14 +19,11 @@
 .registered-users th,
 .registered-users td {
   border: 1px solid #ccc;
+  background-color: #f2f2f2;
   padding: 8px;
 }
 
 .registered-users th {
   background-color: #f2f2f2;
   font-weight: bold;
-}
-
-.registered-users tr:nth-child(even) {
-  background-color: #f9f9f9;
 }
