--- a/css/dashboard_sidebar.css
+++ b/css/dashboard_sidebar.css
@@ -344,11 +344,11 @@ section.home p {
 }
 
 .registeredusers{
-	 position: absolute;
-  	top: 55px;
-  	left: 250px;
+	position: absolute;
+  top: 55px;
+  left: 250px;
  	height: calc(100vh - 55px);
-  	width: calc(100% - 250px);
+  width: calc(100% - 250px);
 	transition: var(--tran-04);
 	background: var(--primary-color);
 	justify-content: center;
@@ -375,4 +375,22 @@ section.home p {
 
 section.registeredusers {
   display: none;
+}
+
+.publishanime{
+	position: absolute;
+  top: 55px;
+  left: 250px;
+ 	height: calc(100vh - 55px);
+  width: calc(100% - 250px);
+	transition: var(--tran-04);
+	background: var(--primary-color);
+	justify-content: center;
+	align-items: center;
+}
+
+.sidebar.close ~ .publishanime{
+	left: 88px;
+	width: calc(100% - 88px);
+	transition: var(--tran-04);
 }
