--- a/css/anime_details.css
+++ b/css/anime_details.css
@@ -1,7 +1,7 @@
 .container {
-  max-width: 960px;
   margin: 0 auto;
   padding: 20px;
+/* Add this CSS to your existing stylesheet or create a new CSS file */
 }
 
 .section-title {
@@ -36,6 +36,12 @@
   width: 80px;
   height: auto;
   object-fit: cover;
+}
+
+.rating-input {
+    width: 40px;
+    padding: 5px;
+    font-size: 16px;
 }
 
 .action-link {
