--- a/css/navbar.css
+++ b/css/navbar.css
@@ -167,3 +167,24 @@ nav{
   z-index: 9999;
   display: none;
 }
+
+.user-details {
+  position: relative;
+  height: 100%;
+  right: 0px;
+  display: flex;
+  align-items: center;
+}
+
+.user-details span {
+  margin-right: 10px;
+}
+
+.user-details a {
+  color: var(--text-color);
+  text-decoration: none;
+  font-weight: bold;
+  padding: 5px 10px;
+  border-radius: 5px;
+  background-color: var(--primary-color-light);
+}
